# hdfq

./: .gitignore  README.md  pyproject.toml
hdfq/: __init__.py  __main__.py  display.py  evaluation.py  exceptions.py  grammar.ebnf  hdfq.py  lexer.py  parser.py  repair.py  syntax.py  tokens.py
hdfq/cli/: __init__.py  app.py
hq/: __init__.py  __main__.py  display.py  evaluation.py  exceptions.py  grammar.ebnf  hq.py  lexer.py  parse.py  parser.py  tokens.py
tests/: test_evaluate.py  test_lex.py  test_parse.py  test_tree.py
