[tool.poetry]
name = "hdfq"
version = "0.3.6"
description = "Command-line HDF5 processor"
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.11"
ch5mpy = { git = "git@gitlab.vidium.fr:vidium/ch5mpy.git" }
typer = "^0.9.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.8.0"

[tool.poetry.scripts]
hdfq = "hdfq.cli.app:app"

[tool.ruff]
line-length = 120
extend-select = ['I']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
